Roundware Server v0.3, XXXX-XX-XX (development version)
---------------------
- Fixed project continuous mode; previously it would never take effect.
- Fixed global listen (when geolisten is disabled) and added unit tests. 
- Adding Timed Asset inline on the Asset Admin view to simplify Timed Asset creation.
- Change default tag filter from "--" to empty string to fix stream tag filtering.
- Add "Browse" UI Mode for manual browsing of content
- Add 'description' parameter to add_asset_to_envelope api/1 call
- Added UPGRADING.md and CHANGELOG.txt
- Fixed recording_collection._banned asset status function.
- Created Timed Playlist to manage audiotrack audio instead of relying on move_listener calls.
- Allowed authorization header to pass through WSGI.
- Moved production Django/Roundware settings out of source directory.
- Symlinked ~/roundware-server to source code on production servers for manage.py.
- Upgraded djangorestframework to 3.0.4.
- Fixed LocalizedString.DoesNotExist exception when Tag doesn't have a localized value.
- Renamed select_method to select in sample project fix install
- Deleted RepeatMode table and converted Project.repeat_mode from foreignkey to char.
- Deleted UIMode Table and converted MasterUI.ui_mode from foreignkey to char.
- Replaced sample project SQL with Django Fixture.
- Patched Django core for M2M deserial: https://code.djangoproject.com/ticket/17946
- Deleted SelectionMethod table and migrated data to CharField choices.
- Removed invalid notifications.action.last_sent_time default.
- Repaired asset limiting by request tags.
- Renamed Composition to AudioTrack
- Removed icecast2.update_metadata and added RoundStream.set_metadata:
  - URLencoded metadata
  - Audiotrack ID
  - Playlist length
  - Asset complete status
- Fixed admin site header with new django 1.7 method.
- Added Admin section to docs with screenshots.
- Adding tests for ban timeout.