@@ -1,7 +1,8 @@
 Roundware Server v0.3, XXXX-XX-XX (development version)
 ---------------------
+- Added project-level option for prioritization of timed-assets.
 - Fixed project continuous mode; previously it would never take effect.
-- Fixed global listen (when geolisten is disabled) and added unit tests. 
+- Fixed global listen (when geolisten is disabled) and added unit tests.
 - Adding Timed Asset inline on the Asset Admin view to simplify Timed Asset creation.
 - Change default tag filter from "--" to empty string to fix stream tag filtering.
 - Add "Browse" UI Mode for manual browsing of content
